* Added experimental support for printing with the Doodle3D WiFi box
* Updated object boundaries for multi-object prints, allows for tighter fitting of objects on the build platform
* Updated time-estimate to greatly improve accuracy of the estimate.
* Fixed problem with retractions not happening when they should.

Ultimaker2 - Firmware update - 13.12
* Fixed bug in acceleration planning causing slow moves on rare occasions.
* Disable the normal menus during USB printing, and support for USB based menus.
* Expert feature: Support M907 for setting the motor current.

Ultimaker Original - Firmware update - 13.12
* Fixed bug in acceleration planning causing slow moves on rare occasions.
* Updated to new ErikZalm Marlin base, fixing the long standing slower retraction bug.

13.11.2
* Adjusted the gantry height to 55mm for the Ultimaker, as 60mm was 3mm to high for the default setup with an V2 hotend.
* Added disallowed zones for UM2
* Added ooze-shield for dual-color printing
* Added wipe tower for dual-extrusion
* Added no-go zones for UM2 glass clips

Ultimaker2 - Firmware update - 13.11-2
* Fixed UM2 build volume offset so that you do not print off the glass plate.
* Slightly tweaked the filament change procedure so there is less chance of a blob staying behind.
* Slightly tweaked the SD-Card error problems.
* Added LED settings to Tune menu
* Start heating the nozzles when the bed is nearing its final temperature, so the nozzles do not sit hot.
* Make sure all commands are finished before starting a print or changing material. This could cause issues when you where too fast.

13.11
* Added imageToMesh tool to load images as 3D height maps
* Fixed Z support distance when using "everywhere" support.
* Updated to new version of clipper to fix rare slicing bugs that resulted in odd paths.
* Fixed "Reset profile" so it no longer resets the machine settings.
* Updated support material so support is smoother and has less small sections which are hard to remove.