@@ -6,6 +6,7 @@ Development
 * Fixed problem with retractions not happening when they should.
 
 Ultimaker2 - Firmware update - 13.12
+* Fixed the problem where aborting a print did not always home the head.
 * Fixed bug in acceleration planning causing slow moves on rare occasions.
 * Disable the normal menus during USB printing, and support for USB based menus.
 * Expert feature: Support M907 for setting the motor current.
